# idempotent-data-pipeline

./: .gitignore  README.md  parking_violation_data_pipeline.py  pyproject.toml
