[tool.poetry]
name = "idempotent-data-pipeline-training"
version = "0.1.0"
description = "Idempotent data pipeline example"
authors = ["Eric Dasse <eric.dasse@stonal.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
